welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:21: error: type yellow is not a member of object java.awt.Color
  faireV(c:Color.yellow); faireV(c:Color.red); faireV(c:Color.blue); faireV(c:Color.green)
                 ^MethodsPicture:21: error: not found: value c
  faireV(c:Color.yellow); faireV(c:Color.red); faireV(c:Color.blue); faireV(c:Color.green)
         ^MethodsPicture:21: error: type red is not a member of object java.awt.Color
  faireV(c:Color.yellow); faireV(c:Color.red); faireV(c:Color.blue); faireV(c:Color.green)
                                         ^MethodsPicture:21: error: not found: value c
  faireV(c:Color.yellow); faireV(c:Color.red); faireV(c:Color.blue); faireV(c:Color.green)
                                 ^MethodsPicture:21: error: type blue is not a member of object java.awt.Color
  faireV(c:Color.yellow); faireV(c:Color.red); faireV(c:Color.blue); faireV(c:Color.green)
                                                              ^MethodsPicture:21: error: not found: value c
  faireV(c:Color.yellow); faireV(c:Color.red); faireV(c:Color.blue); faireV(c:Color.green)
                                                      ^MethodsPicture:21: error: type green is not a member of object java.awt.Color
  faireV(c:Color.yellow); faireV(c:Color.red); faireV(c:Color.blue); faireV(c:Color.green)
                                                                                    ^MethodsPicture:21: error: not found: value c
  faireV(c:Color.yellow); faireV(c:Color.red); faireV(c:Color.blue); faireV(c:Color.green)
                                                                            ^