welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
  for (k <- 1 to 3) {
    faireLigne(); gauche();
    for (l <- 1 to 5) {avance()}
    droite()
    
    
  }
}


def faireCarre() {
  avance(); baisseBrosse; leveBrosse()
}

def faireV(c: Color) {
  setCouleurBrosse(c:Color); faireCarre(); avance(); gauche(); faireCarre(); recule(); droite(); faireCarre(); avance(); gauche()
}

def faireGrandCarre() {
  faireV(c:Color.yellow); faireV(c:Color.red); faireV(c:Color.blue); faireV(c:Color.green)
}

def faireLigne() {
  for (x <- 1 to 3) {
    faireGrandCarre()
    for (y <- 1 to 5) 
    avance()
  }
}